BATM-5305 Add demo exchange for USDTTRON (#1049)